feat: Diamentowa Kreda 2021/2022

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h3>Harmonogram</h3>
                 <p>
                     <strong>28.06 - 19.09</strong> - głosowanie w USOSweb <br>
-                    <strong>07.10</strong> - wręczenie nagród podczas inauguracji
+                    <strong>06.10</strong> - wręczenie nagród podczas inauguracji
                 </p>
             </div>
             <div class="4u$ 12u$(medium) last-in-row">
@@ -108,61 +108,61 @@
     </div>
 </section>
 	
-<section id="results2021" class="main style1 newsarticle">
+<section id="results2022" class="main style1 newsarticle">
     <div class="container">
         <div class="row 150%">
             <div class="6u 12u$(medium)">
                 <header class="major">
-                    <h2>Wyniki plebiscytu 2021</h2>
-                    <p>12-10-21 12:00:00</p>
+                    <h2>Wyniki plebiscytu 2022</h2>
+                    <p>07-10-22 12:00:00</p>
                 </header>
                 <h4>Kierunek informatyka - Najlepszy wykładowca</h4>
                 <ul>
                     <li>dr hab. Adam Roman, prof. UJ - laureat</li>
+                    <li>dr Jakub Zygadło - wyróżnienie</li>
                     <li>dr hab. Krzysztof Bartosz - wyróżnienie</li>
-                    <li>dr Tomasz Kapela - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek informatyka - Najlepszy ćwiczeniowiec </h4>
                 <ul>
-                    <li>mgr Maciej Skwirczyński - lauret</li>
-                    <li>mgr Klaudia Bałazy - wyróżnienie</li>
-		    <li>mgr Michał Jureczka - wyróżnienie</li>
+                    <li>dr Jakub Zygadło - laureat</li>
+                    <li>mgr Michał Jureczka - wyróżnienie</li>
+		            <li>mgr Maciej Skwirczyński - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
                 <ul>
-                    <li>dr Lech Duraj - laureat</li>
-                    <li>prof. dr hab. Marek Zaionc - wyróżnienie</li>
-                    <li>ex aequo dr hab. Jakub Kozik, prof. UJ oraz dr Maciej Ślusarek - wyróżnienie</li>
+                    <li>prof. dr hab. Marek Zaionc - laureat</li>
+                    <li>dr hab. Jakub Kozik, prof. UJ - wyróżnienie</li>
+                    <li>dr Grzegorz Herman - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
                 <ul>
-                    <li>dr Iwona Cieślik - laureat</li>
-                    <li>mgr Jan Derbisz  - wyróznienie</li>
-		    <li>dr Lech Duraj  - wyróznienie</li>
+                    <li>dr Marcin Sroka - laureat</li>
+                    <li>ex aequo dr Iwona Cieślik oraz dr hab. Jakub Kozik, prof. UJ - wyróżnienie</li>
+		            <li>ex aequo dr Lech Duraj oraz dr Grzegorz Herman - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
                 <ul>
-                    <li>dr Krzysztof Ciesielski, prof. UJ - laureat</li>
-                    <li>prof. dr hab. Piotr Tworzewski - wyróżnienie</li>
+                    <li>dr Ewa Cygan, prof. UJ - laureat</li>
                     <li>dr hab. Marta Kosek - wyróżnienie</li>
+                    <li>ex aequo dr hab. Anna Pelczar-Barwacz, prof. UJ oraz prof. dr hab. Sławomir Rams oraz prof. dr hab. Piotr Tworzewski - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
                 <ul>
-                    <li>dr Joanna Orewczyk - laureat</li>
-                    <li>dr hab. Anna Pelczar-Barwacz - wyróżnienie</li>
-                    <li>mgr Damian Jelito - wyróżnienie</li>
+                    <li>dr Damian Jelito - laureat</li>
+                    <li>dr hab. Anna Pelczar-Barwacz, prof. UJ - wyróżnienie</li>
+                    <li>dr Alicja Skiba - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
                 <ul>
                     <li>dr hab. Daniel Wilczak, prof. UJ - laureat</li>
-                    <li>prof. dr hab. Marian Mrozek - wyróżnienie</li>
                     <li>dr Sławomir Bakalarski  - wyróżnienie</li>
+                    <li>prof. dr hab. Marian Mrozek - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
                 <ul>
-                    <li>mgr Michał Lipiński - laureat</li>
-                    <li>dr Sławomir Bakalarski - wyróżnienie</li>
-                    <li>mgr inż. Mateusz Przybylski - wyróżnienie</li>
+                    <li>dr Sławomir Bakalarski - laureat</li>
+                    <li>dr Bogdan Batko - wyróżnienie</li>
+                    <li>ex aequo dr Anna Gierzkiewicz-Pieniążek oraz mgr Michał Jureczka oraz dr hab. Daniel Wilczak prof. UJ - wyróżnienie</li>
                 </ul>
                 <p>
                     Jeszcze raz wszystkim serdecznie gratulujemy!
@@ -267,6 +267,70 @@
     </div>
 </section>
 
+<section id="results2021" class="main style1 newsarticle">
+    <div class="container">
+        <div class="row 150%">
+            <div class="6u 12u$(medium)">
+                <header class="major">
+                    <h2>Wyniki plebiscytu 2021</h2>
+                    <p>12-10-21 12:00:00</p>
+                </header>
+                <h4>Kierunek informatyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr hab. Adam Roman, prof. UJ - laureat</li>
+                    <li>dr hab. Krzysztof Bartosz - wyróżnienie</li>
+                    <li>dr Tomasz Kapela - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka - Najlepszy ćwiczeniowiec </h4>
+                <ul>
+                    <li>mgr Maciej Skwirczyński - laureat</li>
+                    <li>mgr Klaudia Bałazy - wyróżnienie</li>
+		            <li>mgr Michał Jureczka - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr Lech Duraj - laureat</li>
+                    <li>prof. dr hab. Marek Zaionc - wyróżnienie</li>
+                    <li>ex aequo dr hab. Jakub Kozik, prof. UJ oraz dr Maciej Ślusarek - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr Iwona Cieślik - laureat</li>
+                    <li>mgr Jan Derbisz  - wyróżnienie</li>
+		            <li>dr Lech Duraj  - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr Krzysztof Ciesielski, prof. UJ - laureat</li>
+                    <li>prof. dr hab. Piotr Tworzewski - wyróżnienie</li>
+                    <li>dr hab. Marta Kosek - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr Joanna Orewczyk - laureat</li>
+                    <li>dr hab. Anna Pelczar-Barwacz - wyróżnienie</li>
+                    <li>mgr Damian Jelito - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr hab. Daniel Wilczak, prof. UJ - laureat</li>
+                    <li>prof. dr hab. Marian Mrozek - wyróżnienie</li>
+                    <li>dr Sławomir Bakalarski  - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>mgr Michał Lipiński - laureat</li>
+                    <li>dr Sławomir Bakalarski - wyróżnienie</li>
+                    <li>mgr inż. Mateusz Przybylski - wyróżnienie</li>
+                </ul>
+                <p>
+                    Jeszcze raz wszystkim serdecznie gratulujemy!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="results2019" class="main style1 newsarticle">
     <div class="container">
         <div class="row 150%">
@@ -295,7 +359,7 @@
                 <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
                 <ul>
                     <li>dr Iwona Cieślik ex aequo z dr Grzegorz Herman - laureat</li>
-                    <li>dr Marcin Sroka - wyróznienie</li>
+                    <li>dr Marcin Sroka - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
                 <ul>
@@ -360,7 +424,7 @@
                 <ul>
                     <li>dr Sławomir Bakalarski - laureat</li>
                     <li>dr Paweł Bogdan - wyróżnienie</li>
-                    <li>mgr Michał Jureczka - wyróznienie</li>
+                    <li>mgr Michał Jureczka - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
                 <ul>
@@ -371,7 +435,7 @@
                 <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
                 <ul>
                     <li>dr Iwona Cieślik - laureat</li>
-                    <li>dr Grzegorz Herman - wyróznienie</li>
+                    <li>dr Grzegorz Herman - wyróżnienie</li>
                     <li>dr Katarzyna Grygiel - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
