Update voting dates for 2023

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <span class="icon major fa-calendar-alt"></span>
                 <h3>Harmonogram</h3>
                 <p>
-                    <strong>08.09 - 27.09</strong> - głosowanie w USOSweb <br>
-                    <strong>06.10</strong> - wręczenie nagród podczas inauguracji
+                    <strong>07.09 - 24.09</strong> - głosowanie w USOSweb <br>
+                    <strong>TBA</strong> - wręczenie nagród podczas inauguracji
                 </p>
             </div>
             <div class="4u$ 12u$(medium) last-in-row">
