add summary date, desc

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     oraz popularnością wśród studentów.<br>
                     Dzięki współpracy Koła Studentów Informatyki UJ oraz Samorządu Studentów WMII UJ studenci każdego
                     roku mogą wybrać najbardziej według nich zasłużonego dydaktyka.
+                    W 2023 r. obywa się już 5 odsłona głosowania!!!
                 </p>
             </div>
         </div>
@@ -84,7 +85,7 @@
                 <h3>Harmonogram</h3>
                 <p>
                     <strong>07.09 - 24.09</strong> - głosowanie w USOSweb <br>
-                    <strong>TBA</strong> - wręczenie nagród podczas inauguracji
+                    <strong>5.10</strong> - wręczenie nagród podczas inauguracji
                 </p>
             </div>
             <div class="4u$ 12u$(medium) last-in-row">
