--- a/index.html
+++ b/index.html
@@ -105,7 +105,102 @@
         <h2>Aktualności</h2>
     </div>
 </section>
+
+<section id="results2023" class="main style1 newsarticle">
+    <div class="container">
+        <div class="row 150%">
+            <div class="6u 12u$(medium)">
+                <header class="major">
+                    <h2>Wyniki plebiscytu 2023</h2>
+                    <p>06-10-23 09:00:00</p>
+                </header>
+                <h4>Kierunek informatyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr Jakub Zygadło - laureat</li>
+                    <li>dr hab. Adam Roman, prof. UJ - wyróżnienie</li>
+                    <li>dr hab. Krzysztof Bartosz - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka - Najlepszy ćwiczeniowiec </h4>
+                <ul>
+                    <li>dr Jakub Zygadło - laureat</li>
+                    <li>mgr Maciej Skwirczyński - wyróżnienie</li>
+		            <li>dr Artur Polański - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>prof. dr hab. Marek Zaionc - laureat</li>
+                    <li>dr Tomasz Krawczyk - wyróżnienie</li>
+                    <li>ex aequo dr Grzegorz Herman, dr Andrzej Grzesik - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr hab. Jakub Kozik, prof. UJ - laureat</li>
+                    <li>ex aequo dr Iwona Cieślik, dr Lech Duraj, dr Andrzej Grzesik, mgr Andrzej Pezarski, mge Bartosz Podkanowicz - wyróżnienie</li>
+		            <li>ex aequo mgr Krzysztof Potępa - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr Krzysztof Ciesielski, prof. UJ - laureat</li>
+                    <li>dr Marcin Kulczycki - wyróżnienie</li>
+                    <li>dr Ewa Cygan, prof. UJ - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr Halszka Tutaj-Gasińska, prof. UJ - laureat</li>
+                    <li>ex aequo dr hab. Marta Kosek, dr Alicja Skiba - wyróżnienie</li>
+                    <li>ex aequo dr Maciej Denkowski, mgr Jacek Dębecki, mgr Joanna Orewczyk, prof. dr hab. Sławomir Rams - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>prof. dr hab. Marian Mrozek - laureat</li>
+                    <li>prof. dr hab. Daniel Wilczak, prof. UJ - wyróżnienie</li>
+                    <li>dr Sławomir Bakalarski - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr Bogdan Batko - laureat</li>
+                    <li>ex aequo dr Anna Gierzkiewicz-Pieniążek, dr hab. Daniel Wilczak prof. UJ  - wyróżnienie</li>
+                    <li>dr Małgorzata Moczurad - wyróżnienie</li>
+                </ul>
+                <p>
+                    Jeszcze raz wszystkim serdecznie gratulujemy!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 	
+
+<section id="how-to-vote" class="main style1 newsarticle">
+    <div class="container">
+        <div class="row 150%">
+            <div class="6u 12u$(medium)">
+                <header class="major">
+                    <h2>Jak głosować?</h2>
+                    <p>16-06-27 22:14</p>
+                </header>
+                <p>
+                    Aby oddać głos na swoich kandydatów należy zalogować się do <code><a href="https://www.usosweb.uj.edu.pl">USOSweb</a></code>
+                    i przejść do zakładki <code>DLA WSZYSTKICH</code>, a potem <code>Wybory</code>.
+                    Od dnia 28.06 będzie tam dostępne 8 głosowań, po 2 na każdy kierunek prowadzony przez nasz Wydział.
+                    Każdy student może zagłosować w tych wyborach, które dotyczą jego podstawowego kierunku
+                    studiów.
+                </p>
+                <p>
+                    W każdym głosowaniu można wybrać po jednej osobie, do której według nas powinna trafić nagroda. Prosimy zgłaszać ewentualne problemy z głosowaniem
+                    (w szczególności brak możliwości oddania głosu lub brak podpięcia prowadzącego zajęcia pod odpowiednie głosowanie) na adres <code>wmii@samorzad.uj.edu.pl</code>.
+                <p>
+            </div>
+        </div>
+    </div>
+</section>
+
+ <section id="history" class="style1 headline">
+    <div class="container">
+        <h2>Historia</h2>
+    </div>
+</section>
+
 <section id="results2022" class="main style1 newsarticle">
     <div class="container">
         <div class="row 150%">
@@ -217,52 +312,6 @@
            </div>
        </div>
    </div>
-</section>
-<section id="how-to-vote" class="main style1 newsarticle">
-    <div class="container">
-        <div class="row 150%">
-            <div class="6u 12u$(medium)">
-                <header class="major">
-                    <h2>Jak głosować?</h2>
-                    <p>16-06-27 22:14</p>
-                </header>
-                <p>
-                    Aby oddać głos na swoich kandydatów należy zalogować się do <code><a href="https://www.usosweb.uj.edu.pl">USOSweb</a></code>
-                    i przejść do zakładki <code>DLA WSZYSTKICH</code>, a potem <code>Wybory</code>.
-                    Od dnia 28.06 będzie tam dostępne 8 głosowań, po 2 na każdy kierunek prowadzony przez nasz Wydział.
-                    Każdy student może zagłosować w tych wyborach, które dotyczą jego podstawowego kierunku
-                    studiów.
-                </p>
-                <p>
-                    W każdym głosowaniu można wybrać po jednej osobie, do której według nas powinna trafić nagroda. Prosimy zgłaszać ewentualne problemy z głosowaniem
-                    (w szczególności brak możliwości oddania głosu lub brak podpięcia prowadzącego zajęcia pod odpowiednie głosowanie) na adres <code>wmii@samorzad.uj.edu.pl</code>.
-                <p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- new article pattern
-    <section id="one" class="main style1 newsarticle">
-    <div class="container">
-        <div class="row 150%">
-            <div class="6u 12u$(medium)">
-                <header class="major">
-                    <h2>Title</h2>
-                    <p>DD-MM-RR GG:MM</p>
-                </header>
-                <p>Text</p>
-            </div>
-        </div>
-    </div>
-</section>
- -->
-
-
-<section id="history" class="style1 headline">
-    <div class="container">
-        <h2>Historia</h2>
-    </div>
 </section>
 
 <section id="results2021" class="main style1 newsarticle">
