--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                 <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
                 <ul>
                     <li>prof. dr hab. Marek Zaionc - laureat</li>
-                    <li>dr Tomasz Krawczyk - wyróżnienie</li>
+                    <li>dr hab. Tomasz Krawczyk - wyróżnienie</li>
                     <li>ex aequo dr Grzegorz Herman, dr Andrzej Grzesik - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
                 <ul>
                     <li>dr hab. Jakub Kozik, prof. UJ - laureat</li>
-                    <li>ex aequo dr Iwona Cieślik, dr Lech Duraj, dr Andrzej Grzesik, mgr Andrzej Pezarski, mge Bartosz Podkanowicz - wyróżnienie</li>
-		            <li>ex aequo mgr Krzysztof Potępa - wyróżnienie</li>
+                    <li>ex aequo dr Iwona Cieślik, dr Lech Duraj, dr Andrzej Grzesik, mgr Andrzej Pezarski, mgr Bartosz Podkanowicz - wyróżnienie</li>
+		            <li>mgr Krzysztof Potępa - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
                 <ul>
@@ -146,14 +146,14 @@
                 </ul>
                 <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
                 <ul>
-                    <li>dr Halszka Tutaj-Gasińska, prof. UJ - laureat</li>
+                    <li>dr hab. Halszka Tutaj-Gasińska - laureat</li>
                     <li>ex aequo dr hab. Marta Kosek, dr Alicja Skiba - wyróżnienie</li>
-                    <li>ex aequo dr Maciej Denkowski, mgr Jacek Dębecki, mgr Joanna Orewczyk, prof. dr hab. Sławomir Rams - wyróżnienie</li>
+                    <li>ex aequo dr hab. Maciej Denkowski, prof. UJ, dr hab. Jacek Dębecki, dr Joanna Orewczyk, prof. dr hab. Sławomir Rams - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
                 <ul>
                     <li>prof. dr hab. Marian Mrozek - laureat</li>
-                    <li>prof. dr hab. Daniel Wilczak, prof. UJ - wyróżnienie</li>
+                    <li>dr hab. Daniel Wilczak, prof. UJ - wyróżnienie</li>
                     <li>dr Sławomir Bakalarski - wyróżnienie</li>
                 </ul>
                 <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
