--- a/index.html
+++ b/index.html
@@ -106,6 +106,70 @@
     </div>
 </section>
 
+<section id="results2024" class="main style1 newsarticle">
+    <div class="container">
+        <div class="row 150%">
+            <div class="6u 12u$(medium)">
+                <header class="major">
+                    <h2>Wyniki plebiscytu 2024</h2>
+                    <p>16-12-24 19:00:00</p>
+                </header>
+                <h4>Kierunek informatyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr hab. Adam Roman, prof. UJ - laureat</li>
+                    <li>dr Jakub Zygadło - wyróżnienie</li>
+                    <li>dr hab. Marek Śmieja, prof. UJ - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka - Najlepszy ćwiczeniowiec </h4>
+                <ul>
+                    <li>mgr Michał Jureczka - laureat</li>
+                    <li>dr Maciej Skwirczyński - wyróżnienie</li>
+		            <li>dr Sławomir Bakalarski - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>prof. dr hab. Marek Zaionc - laureat</li>
+                    <li>dr hab. Piotr Micek, prof. UJ - wyróżnienie</li>
+                    <li>mgr Andrzej Pezarski - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>mgr Andrzej Pezarski - laureat</li>
+                    <li>dr hab. Jakub Kozik, prof. UJ - wyróżnienie</li>
+		            <li>mgr Demian Banakh - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr hab. Anna Pelczar-Barwacz, prof. UJ - laureat</li>
+                    <li>dr hab. Marta Kosek - wyróżnienie</li>
+                    <li>prof. dr hab. Sławomir Rams - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>dr Alicja Skiba - laureat</li>
+                    <li>dr Damian Jelito - wyróżnienie</li>
+                    <li>dr Joanna Orewczyk - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
+                <ul>
+                    <li>dr hab. Daniel Wilczak, prof. UJ - laureat</li>
+                    <li>ex aequo dr Sławomir Bakalarski, dr Anna Gierzkiewicz-Pieniążek - wyróżnienie</li>
+                    <li>prof. dr hab. Marian Mrozek - wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                    <li>mgr Michał Jureczka - laureat</li>
+                    <li>ex aequo dr Sławomir Bakalarski, dr Anna Gierzkiewicz-Pieniążek - wyróżnienie</li>
+                    <li>dr hab. Bogdan Batko - wyróżnienie</li>
+                </ul>
+                <p>
+                    Jeszcze raz wszystkim serdecznie gratulujemy!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="results2023" class="main style1 newsarticle">
     <div class="container">
         <div class="row 150%">
