Add the 2025 winners and update the rules

--- a/index.html
+++ b/index.html
@@ -75,17 +75,18 @@
             <div class="4u 12u$(medium)">
                 <span class="icon major fa-file-pdf"></span>
                 <h3>Regulamin</h3>
-                <p>Regulamin dostępny jest formacie PDF</p>
+                <p>Aktualny regulamin dostępny jest formacie PDF</p>
                 <ul class="actions">
-                    <li><a href="images/diamentowa-kreda-regulamin.pdf" class="button">Pobierz PDF</a></li>
+                    <li><a href="images/diamentowa-kreda-regulamin-2025.pdf" class="button">Aktualny regulamin (PDF)</a></li>
+                    <li><a href="images/diamentowa-kreda-regulamin-old.pdf" class="button">Regulamin 2018-2024 (PDF)</a></li>
                 </ul>
             </div>
             <div class="4u 12u$(medium)">
                 <span class="icon major fa-calendar-alt"></span>
                 <h3>Harmonogram</h3>
                 <p>
-                    <strong>07.09 - 24.09</strong> - głosowanie w USOSweb <br>
-                    <strong>5.10</strong> - wręczenie nagród podczas inauguracji
+                    <strong>16 IX - 24 IX</strong> - głosowanie w USOSweb <br>
+                    <strong>2 X</strong> - wręczenie nagród podczas inauguracji
                 </p>
             </div>
             <div class="4u$ 12u$(medium) last-in-row">
@@ -105,6 +106,84 @@
         <h2>Aktualności</h2>
     </div>
 </section>
+
+<section id="results2025" class="main style1 newsarticle">
+    <div class="container">
+        <div class="row 150%">
+            <div class="6u 12u$(medium)">
+                <header class="major">
+                    <h2>Wyniki plebiscytu 2025</h2>
+                    <p>2025-10-08 13:00:00</p>
+                </header>
+                <h4>Kierunek informatyka - Najlepszy wykładowca</h4>
+                <ul>
+                  <li>dr Michał Jureczka – laureat</li>
+                  <li>dr Sławomir Bakalarski – wyróżnienie</li>
+                  <li>dr Edward Szczypka – wyróżnienie</li>
+                  <li>prof. dr hab. Adam Roman – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka - Najlepszy ćwiczeniowiec </h4>
+                <ul>
+                  <li>dr Michał Jureczka – laureat</li>
+                  <li>dr Maciej Skwirczyński – wyróżnienie</li>
+                  <li>dr Sławomir Bakalarski – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy wykładowca</h4>
+                <ul>
+                  <li>prof. dr hab. Marek Zaionc – laureat</li>
+                  <li>dr Grzegorz Herman – wyróżnienie</li>
+                  <li>dr hab. Piotr Micek prof. UJ – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek informatyka analityczna - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                  <li>dr Grzegorz Herman – laureat</li>
+                  <li>dr Krystian Gajdzica – wyróżnienie</li>
+                  <li>dr Katarzyna Grygiel – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy wykładowca</h4>
+                <ul>
+                  <li>dr Krzysztof Ciesielski prof. UJ – laureat</li>
+                  <li>dr hab. Anna Pelczar-Barwacz prof. UJ – wyróżnienie</li>
+                  <li>dr Dawid Tarłowski – wyróżnienie</li>
+                  <li>dr Marcin Kulczycki – wyróżnienie</li>
+                  <li>dr hab. Maciej Denkowski prof. UJ – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                  <li>dr hab. Jacek Dębecki – laureat</li>
+                  <li>dr Joanna Orewczyk – wyróżnienie</li>
+                  <li>dr Alicja Skiba – wyróżnienie</li>
+                  <li>dr hab. Marta Kosek – wyróżnienie</li>
+                  <li>dr Damian Jelito – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy wykładowca</h4>
+                <ul>
+                  <li>dr hab. Daniel Wilczak prof. UJ – laureat</li>
+                  <li>prof. dr hab. Marian Mrozek – wyróżnienie</li>
+                  <li>dr Sławomir Bakalarski – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek matematyka komputerowa - Najlepszy ćwiczeniowec</h4>
+                <ul>
+                  <li>Jakub Leśkiewicz – laureat</li>
+                  <li>dr inż. Mateusz Przybylski – wyróżnienie</li>
+                  <li>dr Anna Gierzkiewicz-Pieniążek – wyróżnienie</li>
+                  <li>dr hab. Bogdan Batko – wyróżnienie</li>
+                </ul>
+                <h4>Kierunek sztuczna inteligencja - Najlepszy wykładowca</h4>
+                <ul>
+                  <li>prof. dr hab. Jacek Tabor – laureat</li>
+                  <li>dr hab. Piotr Niemiec prof. UJ – wyróżnienie</li>
+                  <li>dr Michał Jureczka – wyróżnienie</li>
+                </ul>
+                <p>
+                    <strong>Jeszcze raz wszystkim serdecznie gratulujemy!</strong>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 <section id="results2024" class="main style1 newsarticle">
     <div class="container">
