Update more stuff in the meantime while adding 2025 winners

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     oraz popularnością wśród studentów.<br>
                     Dzięki współpracy Koła Studentów Informatyki UJ oraz Samorządu Studentów WMII UJ studenci każdego
                     roku mogą wybrać najbardziej według nich zasłużonego dydaktyka.
-                    W 2023 r. obywa się już 5 odsłona głosowania!!!
+                    W 2025 roku odbyła się już <strong>siódma</strong> odsłona głosowania!!!
                 </p>
             </div>
         </div>
@@ -77,7 +77,7 @@
                 <h3>Regulamin</h3>
                 <p>Aktualny regulamin dostępny jest formacie PDF</p>
                 <ul class="actions">
-                    <li><a href="images/diamentowa-kreda-regulamin-2025.pdf" class="button">Aktualny regulamin (PDF)</a></li>
+                    <li><a href="images/diamentowa-kreda-regulamin-2025.pdf" class="button">Regulamin 2025 (PDF)</a></li>
                     <li><a href="images/diamentowa-kreda-regulamin-old.pdf" class="button">Regulamin 2018-2024 (PDF)</a></li>
                 </ul>
             </div>
